2008-03-27; Alexandru Csete <oz9aec@gmail.com>

    * src/radio-conf.[ch]:
    Added parameter for enabling built-in radio extensions.
    
    * src/sat-pref-rig.c:
    * src/sat-pref-rig-editor.c:
    * src/sat-pref-rig-data.h:
    Added configuration controls for CAT extensions
    

2008-03-17; Alexandru Csete <oz9aec@gmail.com>

    * src/sat-pref-rig.c:
    Fixed bug that caused incorrect display of DTR and RTS line settings in
    the radio list.
    

2008-01-26; Alexandru Csete <oz9aec@gmail.com>

    * src/rotor-conf.[ch]:
    * src/sat-pref-rot.c:
    * src/sat-pref-rot-editor.c
    * src/sat-pref-rot-data.h:
    Added support for Az and El limits.


2008-01-24; Alexandru Csete <oz9aec@gmail.com>

    * src/sat-pref-rig-editor.[ch]:
    Finished first draft of radio configuration editor.
    
    * src/sat-pref-rig.c:
    Finished radio configuration page.
    
    * src/rotor-conf.[ch]:
    * src/sat-pref-rot-editor.[ch]:
    * src/sat-pref-rot-data.h:
    Added files with functions to read and save rotator configuration.
    
    * src/sat-pref-rot.c:
    Updated to use new rotator configuration code.
    

2008-01-12; Alexandru Csete <oz9aec@gmail.com>

    * src/radio-conf.[ch]:
    Added parameter for radio type (RX, TX, TRX, FULL_DUPL).
    
    
2008-01-21; Alexandru Csete <oz9aec@gmail.com>

    * src/radio-conf.[ch], src/sat-pref-rig.c:
    Removed manufacturer field. Will be part of the model.
    
    * src/sat-pref-rig-editor.c:
    Added all widgets except the rig model selector.


2008-01-01; Alexandru Csete <oz9aec@gmail.com>

    * src/compat.[ch]:
    Added function to return user home directory.
    
    * src/first-time.[ch]:
    Added check for /hwconf directory.
    
    * src/radio-conf.[ch]:
    Added files containing functions for reading and writing radio
    configuration files.


2007-12-27; Alexandru Csete <oz9aec@gmail.com>

    * src/sat-cfg.[ch]:
    Added parameters for adding new satellites to database.